# weather

./: .gitignore  README.md  db.sqlite3  pyproject.toml
frontend/src/app/: globals.css  page.tsx
weatherApp/: settings.py  urls.py
weatherDisplay/: apps.py  forms.py  models.py  serializers.py  urls.py  views.py
weatherDisplay/migrations/: 0001_initial.py  0002_alter_weather_condition_alter_weather_err_and_more.py
weatherDisplay/templates/: index.html
weatherDisplay/tests/: __init__.py  django_view_test.py  view_test.py
